Update bug section to padding og gap fjernet sortiment.css

--- a/sortiment.css
+++ b/sortiment.css
@@ -63,8 +63,6 @@
     justify-content: center;
     align-items: center;
     background-color: #8A5E2D;
-    gap: 50px;
-    padding: 20px;
     box-sizing: border-box;
 }
 
